# ChangeLog for app-shells/bash
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.187 2008/12/31 18:35:24 bluebird Exp $

  31 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> bash-3.2_p39.ebuild:
  Stable on sparc, bug #235020

*bash-3.2_p48 (20 Nov 2008)

  20 Nov 2008; Peter Alfredsen <loki_val@gentoo.org> +bash-3.2_p48.ebuild:
  Bump for God, King and Country.

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/bash-3.0-darwin-conn.patch:
  Fix patch with absolute paths.

  24 Aug 2008; Tobias Klausmann <klausman@gentoo.org> bash-3.2_p39.ebuild:
  Misread bug #235020

  24 Aug 2008; Tobias Klausmann <klausman@gentoo.org> bash-3.2_p39.ebuild:
  Stable on alpha, bug #235020

  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  25 Jun 2008; Bo Ørsted Andresen <zlin@gentoo.org> bash-3.2_p39.ebuild:
  Move recreation of /bin/sh to pkg_preinst since reinstalling _p39 when it is
  recorded into contents results in a fatal error with paludis.

  13 Jun 2008; Zac Medico <zmedico@gentoo.org> bash-3.2_p39.ebuild:
  Bug #222721 - Replace the !<sys-apps/portage-2.1.4_rc1 blocker
  (from bug #190128) with !<sys-apps/portage-2.1.5 to ensure that
  phase execution order is such that the /bin/sh symlink will be
  created in the postinst phase when necessary. This eliminates the
  need for an associated die call in pkg_setup(). The blocker will
  be solved automatically by emerge since it can adjust install order
  such that the upgrade from portage-2.1.4.x to portage-2.1.5.x occurs
  before the upgrade to bash-3.2_p39.

  12 Jun 2008; Bo Ørsted Andresen <zlin@gentoo.org> bash-3.2_p39.ebuild:
  Ensure that portage < 2.1.5 upgrade bash with FEATURES=-unmerge-orphans.
  Rewrite /bin/sh to prevent it from being uninstalled by changing its mtime.

  31 May 2008; Mike Frysinger <vapier@gentoo.org> bash-3.2_p39.ebuild: